--- a/config/locales/pt-BR/active_record.yml
+++ b/config/locales/pt-BR/active_record.yml
@@ -138,6 +138,7 @@ pt-BR:
       wrong_length:
         one: não possui o tamanho esperado (1 caracter)
         other: não possui o tamanho esperado (%{count} caracteres)
+      resource_not_found: recurso não encontrado
     template:
       body: 'Por favor, verifique o(s) seguinte(s) campo(s):'
       header:
